Revision history for MooseX-Declare

{{$NEXT}}

0.41      2015-05-16 03:35:49Z
  - mark this distribution as deprecated in metadata

0.40      2014-11-12 02:27:58Z
  - mention deprecation status in module ABSTRACT
  - fix warning in tests on 5.8.x

0.39      2014-08-16 19:12:31Z
  - line numbers in shipped code are now almost the same (within 1) as
    the repository source, for easier debugging
  - pod fixes (Frank Wiegand, RT#51722)

0.38      2013-12-14 18:39:30Z
  - update configure_requires checking in Makefile.PL, add CONTRIBUTING file

0.37      2013-09-26 04:08:21Z
  - repository migrated to the github moose organization
  - re-release with fixed compile test

0.36      2013-09-10 02:33:28Z
  - Depend on 'aliased'.
  - The test suite now uses Test::Fatal instead of Test::Exception. (Karen
    Etheridge)
  - removed use of deprecated Class::MOP::load_class, calling enum with a list
  - converted use of Class::MOP::class_of to Moose::Util::find_meta
  - new WARNING section added to pod, regarding future utility of this module

0.35   2011-08-23 11:13:10Z
  - Adapt to changes in MooseX::Role::Parameterized 0.27.

0.34   2010-08-31 23:10:28Z
  * Depend on MooseX::Method::Signatures 0.36 to avoid deprecation warnings on
    new versions of Moose (Jeremy Carman).

0.33   2010-02-04 01:50:14Z
  - Depend on MooseX::Method::Signatures 0.30 to fix various incompatibilities.

0.32   2009-11-02 02:00:42Z
  - Add link to Geany syntax notes to documentation (Michele Beltrame).
  - Convert from MooseX::MethodAttributes to Native::Trait (Justin Hunter).
  - Update dependency on MooseX::Types (Chris Prather).

0.31   2009-09-17 16:10:22Z
  - Bump dependencies for no more warnings on new Moose versions.

0.30   2009-09-05 00:48:05Z
  - Make the attr inheriting TODO test work.
  - Make default values for role parameters work (nperez).
  - Add tests for the above (nperez).

0.29   2009-08-31 17:11:25Z